testsuite/tests/typecheck/should_fail/T22924a.stderr
T22924a.hs:9:5: error: [GHC-25897]
    • Couldn't match type ‘a’ with ‘[R]’ arising from a use of ‘coerce’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          f :: forall a. a -> [R]
        at T22924a.hs:7:1-13
    • In the expression: coerce
      In an equation for ‘f’: f = coerce
    • Relevant bindings include f :: a -> [R] (bound at T22924a.hs:9:1)

